--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="tab-btn" onclick="showTab(2)">选品03<br>国产过河石</div>
         <div class="tab-btn" onclick="showTab(3)">选品04<br>吊环</div>
         <div class="tab-btn" onclick="showTab(4)">选品05<br>绳网</div>
-        <div class="tab-btn" onclick="showTab(5)">选品06<br>海洋球</div>
+        <div class="tab-btn" onclick="showTab(5)">选品06<br>布套及相关</div>
         <div class="tab-btn" onclick="showTab(6)">选品07<br>秋千</div>
         <div class="tab-btn" onclick="showTab(7)">选品08<br>大颗粒积木板</div>
         <div class="tab-btn" onclick="showTab(8)">选品09<br>游戏/收纳盒</div>
@@ -221,7 +221,7 @@
             <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
             <div class="yangmaochang" style="font-size:1.5em">
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
-                <div class="taobao"><span>3$So0f35cjN09$:// CA1710</span><br /><button
+                <div class="taobao"><span>5$hp4D38dU5EP$:// ZH9114</span><br /><button
                         onclick="clip(this)">复制淘口令</button></div>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 打开淘宝查看商品<br>
@@ -263,7 +263,7 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版Staplestein玩法说明可以私信驯兽师</b></div>
             <img src="3shi.webp" style="width:50%" />
-            <div class="taobao"><span>9(HQMa35clh1V):// CZ3457</span><br /><button
+            <div class="taobao"><span>4(IxFO38dVbN7):// HU7709</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab3-->
@@ -271,7 +271,7 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>可以让单杠旋转起来很好玩，也适合抓握力一般的崽崽过度，绳子还可以用在别的元素上<br>请选择1m可调节款</b></div>
             <img src="4dangang.webp" style="width:40%" />
-            <div class="taobao"><span>3(rVaW35cleph):// CZ3457</span><br /><button
+            <div class="taobao"><span>4(UPGN38dWraK):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab4-->
@@ -280,21 +280,21 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>尼龙绳</b></div>
             <div style="font-size:1.2em; "><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
             <img src="5sheng.webp" style="width:40%" />
-            <div class="taobao"><span>3(qDJf35cNyk5):// MF3135</span><br /><button
+            <div class="taobao"><span>8(5idY38dW1jt):// CZ6135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹力绳</b></div>
             <div style="font-size:1.2em; "><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
             <img src="5tanli.webp" style="width:40%" />
-            <div class="taobao"><span>1(bmSF35cLfgb):// CA1831</span><br /><button
+            <div class="taobao"><span>6(Hx8338dVQBq):// HU7177</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>自制爬网棉绳</b></div>
             <div style="font-size:1.2em;"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img src="5miansheng.webp" style="width:40%" />
-            <div class="taobao"><span>3(E5bB35cox1F):// ZH9102</span><br /><button
+            <div class="taobao"><span>1(p9x438d4kQy):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -311,9 +311,14 @@
         <!--end of tab5-->
 
         <div class="tab-page">
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>布艺</b></div>
+            <div style="font-size:1.2em; "><b>|xhs@娜娜和宝平欧巴|和|xhs@吉祥如意小裁缝|家都有布艺，娜娜家的主打可爱选择的布料都比较卡通，小裁缝家主打厚实。</b></div>
+            
+            <br>
+            <br>
             <div style="font-size:1.2em; "><b>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</b></div>
             <img src="6haiyangqiu.webp" style="width:40%" />
-            <div class="taobao"><span>6(K16535cKmYU):// CA1710</span><br /><button
+            <div class="taobao"><span>4(eSpi38dR0M6):// CZ6144</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab6-->
@@ -322,21 +327,21 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>软秋千</b></div>
             <div style="font-size:1.2em; "><b>适合小娃，样式方便收纳不占空间</b></div>
             <img src="7qiuqian1.webp" style="width:40%" />
-            <div class="taobao"><span>4(xFEQ35cr4X6):// CA1371</span><br /><button
+            <div class="taobao"><span>7(BT9638d8UUE):// HU7679</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>定型秋千</b></div>
             <div style="font-size:1.2em; "><b>小泰克适合小娃，很多小伙伴选择的款式，优点是定型，缺点是不方便收纳</b></div>
             <img src="7qiuqian3.webp" style="width:40%" />
-            <div class="taobao"><span>0(D7NO35cIWqP):// CZ3457</span><br /><button
+            <div class="taobao"><span>8(r7dK38dUlNp):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>板子秋千</b></div>
             <div style="font-size:1.2em; "><b>适合大娃，简单方便易收纳，也可以直接用15*35的半板搭建</b></div>
             <img src="7qiuqian2.webp" style="width:40%" />
-            <div class="taobao"><span>6(zGym35cIxA7):// HU7177</span><br /><button
+            <div class="taobao"><span>1(et8a38dNwum):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab7-->
@@ -345,22 +350,29 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Lego原版底板</b></div>
             <div style="font-size:1.2em; "><b>得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
             <img src="8lego.webp" style="width:40%" />
-            <div class="taobao"><span>3(kS8n3S08RCq):// CZ6144</span><br /><button
+            <div class="taobao"><span>8(MEyS38d13Gx):// MF1001</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替底板，适配得宝</b></div>
             <img src="8jimuban.webp" style="width:40%" />
-            <div class="taobao"><span>9(I3tv35csy6R):// CA1501</span><br /><button
+            <div class="taobao"><span>7(xkI138diMzJ):// CA1371</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab8-->
 
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配方形箱子</b></div>
-            <div style="font-size:1.2em; "><b>Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
+            <div style="font-size:1.2em; "><b>宜家Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
             <img src="9penzi.webp" style="width:40%" />
-            <div class="taobao"><span>4(2c8735cGu0C):// CA1501</span><br /><button
+            <div class="taobao"><span>0(VvK938dRl30):// ZH9102</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配长方形感官盆</b></div>
+            <div style="font-size:1.2em; "><b>宜家SAMLA 55升可以卡在35+35x25+20cm的框架里，可以做更大的感观盆 （20管可以在淘宝Quadro中国买到）</b></div>
+            <img src="9penzi2.webp" style="width:40%" />
+            <div class="taobao"><span>3(eH1O38dmv0H):// HU7709</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -368,14 +380,14 @@
             <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</b></div>
             <img src="9shouna3.webp" style="display:inline-block;width:50%" />
             <img src="9shouna4.webp" style="display:inline-block;width:50%" />
-            <div class="taobao"><span>2(iOYF35cuIZ9):// CZ3457</span><br /><button
+            <div class="taobao"><span>0(18Sk38dSEDc):// CA1710</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</b></div>
             <img src="9shouna5.webp" style="width:40%" />
             <img src="9shouna2.webp" style="width:40%" />
-            <div class="taobao"><span>4(1z3Z35cuvp8):// ZH9102</span><br /><button
+            <div class="taobao"><span>4(emqC38didAz):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab9-->
@@ -384,14 +396,14 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>扎带</b></div>
             <div style="font-size:1.2em; "><b>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</b></div>
             <img src="10zhadai.webp" style="width:40%" />
-            <div class="taobao"><span>7(8YU535cuoyr):// MF3084/</span><br /><button
+            <div class="taobao"><span>0(lxq638dTKV7):// MF3106</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>管道玩具</b></div>
             <div style="font-size:1.2em;"><b>亚克力洞洞板（孔径6cm）上可以使用</b></div>
             <img src="10gundao.webp" style="display:inline-block;width:40%" />
-            <div class="taobao"><span>6(22T53RPHyhq):// CA1710</span><br /><button
+            <div class="taobao"><span>4(f7A438dVb7s):// MF3135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -399,7 +411,7 @@
             <div style="font-size:1.2em;"><b>在亚克力板上显色较为清楚，容易擦洗</b></div>
             <img src="10bi.webp" style="display:inline-block;width:40%" />
             <img src="10bi2.webp" style="display:inline-block;width:40%" />
-            <div class="taobao"><span>2(y3WI35cFQzT):// CA1371</span><br /><button
+            <div class="taobao"><span>4(QKkI38dStot):// HU7679</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab10-->
@@ -407,7 +419,7 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是58元</b></div>
             <img src="11lvguan.webp" style="width:40%" />
-            <div class="taobao"><span>3(w0Gb35cFiSO):// CA1710</span><br /><button
+            <div class="taobao"><span>6(KiXR38d68vF):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab11-->
@@ -416,14 +428,14 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>金属洞洞板</b></div>
             <div style="font-size:1.2em; "><b>推荐用心在做产品的两个姐妹，她们的洞洞板各有千秋，大家根据自己的需求选择<br>羊毛厂会不定时组织团购活动，欢迎进群！</b></div>
             <br>
-            <div style="font-size:1.2em; ">1|吉祥如意小裁缝|<br>特点是圆形通用孔洞、细磨砂质地、和Quadro大板尺寸完全一致可以严丝合缝链接、对边固定空洞、面板大螺丝固定、整体相对轻便。
+            <div style="font-size:1.2em; ">1|xhs@吉祥如意小裁缝|<br>特点是圆形通用孔洞、细磨砂质地、和Quadro大板尺寸完全一致可以严丝合缝链接、对边固定空洞、面板大螺丝固定、整体相对轻便。
             </div>
             <img src="12dongdongban5.webp" style="width:40%" />
             <div class="taobao"><span>https://m.tb.cn/h.gncFHcL?tk=uhYx3fMk5OK HU904</span><br /><button
                     onclick="clip(this)">复制链接，粘贴到浏览器地址栏打开</button></div>
             <br>
             <br>
-            <div style="font-size:1.2em; ">|哎哟妈呀|<br>特点是宜家长孔、光面、适配Quadro及所有国产、四边固定孔洞、面板大螺丝固定、板面比较厚实。</div>
+            <div style="font-size:1.2em; ">|xhs@哎哟妈呀|<br>特点是宜家长孔、光面、适配Quadro及所有国产、四边固定孔洞、面板大螺丝固定、板面比较厚实。</div>
             <img src="12dongdongban4.webp" style="width:45%" />
             <div class="taobao"><span>https://m.tb.cn/h.gnXYrbem9C0XWan?tk=hIoZ3fMHeFY MF3543 </span><br /><button
                     onclick="clip(this)">复制链接，粘贴到浏览器地址栏打开</button></div>
@@ -433,43 +445,36 @@
             <div style="font-size:1.2em; "><b>适配|吉祥如意小裁缝|洞洞板的配件</b></div>
             <img src="12pj1.webp" style="display:inline-block;width:18%" />
             <img src="12pj2.webp" style="display:inline-block;width:18%" />
-            <div class="taobao"><span>7(GgOA35cEgpD):// MF1001</span><br /><button
+            <div class="taobao"><span>7(oWpQ38dcVGq):// MU6304</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>适配|哎哟妈呀|洞洞板的配件</b></div>
             <img src="12pj3.webp" style="width:40%" />
-            <div class="taobao"><span>4(zyag35cDc3h):// HU7709</span><br /><button
+            <div class="taobao"><span>0(6UzR38dXgZY):// CA1371</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
             <img src="12dongdongban1.webp" style="width:40%" />
-            <div class="taobao"><span>9(1waF35cDoVm):// CZ3148</span><br /><button
+            <div class="taobao"><span>7(kVxK38d65Ak):// HU7709</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>吸力比较好的小可爱磁铁</b></div>
             <img src="12dongdongban3.webp" style="width:40%" />
-            <div class="taobao"><span>9(bMDh35cC7wE):// ZH9114</span><br /><button
+            <div class="taobao"><span>6(uvwa38dTYFz):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>车辆磁力贴，崽崽很喜欢，但单词翻译不是很完美</b></div>
             <img src="12dongdongban2.webp" style="width:40%" />
-            <div class="taobao"><span>0(MX6335cxn63):// CZ6135</span><br /><button
+            <div class="taobao"><span>9(UI5Z38dTMq9):// MF3106</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab12-->
 
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>纯棉地毯</b></div>
-            <div style="font-size:1.2em; "><b>可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
-            <img src="13ditan1.webp" style="width:40%" />
-            <div class="taobao"><span>2(K5H735cCXdQ):// ZH9102</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
-            <br>
-            <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>曼龙地垫</b></div>
             <div style="font-size:1.2em; "><b>弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
             <img src="13ditan2.webp" style="width:40%" />
@@ -480,10 +485,17 @@
             </a>
             <br>
             <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>纯棉地毯</b></div>
+            <div style="font-size:1.2em; "><b>可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
+            <img src="13ditan1.webp" style="width:40%" />
+            <div class="taobao"><span>8(n7Eg38dVMTW):// HU7177</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <br>
+            <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>东理地毯</b></div>
             <div style="font-size:1.2em; "><b>颜值很高可以随意拼装，较好收纳，但打理相较前两种比较困难</b></div>
             <img src="13ditan3.webp" style="width:40%" />
-            <div class="taobao"><span>4fu😄質null MF3084,打開/</span><br /><button
+            <div class="taobao"><span>1(wEv438deBV1):// CZ3148</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab13-->
@@ -518,9 +530,9 @@
         <!--end of tab15-->
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>小泰克厨房三大金刚</b></div>
-            <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐</b></div>
+            <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐：很仿真宝贝很喜欢</b></div>
             <img src="9shouna3.webp" style="display:inline-block;width:50%" />
-            <div class="taobao"><span>6(vaRf3Rkzihw):// CZ6144</span><br /><button
+            <div class="taobao"><span>2(AFJ638d1I7L):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -536,14 +548,14 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>美朵嘉蚊帐</b></div>
             <div style="font-size:1.2em; "><b>全包蚊帐，质量不错抗造，售后服务也很好，南方必备</b></div><
             <img src="15wenz.webp" style="display:inline-block;width:50%" />
-            <div class="taobao"><span>1(aEsi3RPNXrp):// ZH9114</span><br /><button
+            <div class="taobao"><span>4(Ogvu38dfpQM):// CA1501</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>睿思重力轨道球</b></div>
             <div style="font-size:1.2em; "><b>开放性STEM玩具，可以直接入经典版，亚马逊也可以买到少儿版</b></div><
             <img src="15zhongliqiu.webp" style="display:inline-block;width:50%" />
-            <div class="taobao"><span>0(tNqZ3RPqcin):// CA1501</span><br /><button
+            <div class="taobao"><span>3(CgVX38dUlUp):// HU7177</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab16-->
