--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>商家介绍</b></div>
             <div style="font-size:1.2em; "><b>德国Quadro授权的中国市场经销商，原装正品，在淘宝上进行交易，国内现货，发货迅速，有靠谱的售后。</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时活动</b></div>
             <p>暂无</p>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
@@ -313,9 +314,9 @@
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>布艺</b></div>
             <div style="font-size:1.2em; "><b>|xhs@娜娜和宝平欧巴|和|xhs@吉祥如意小裁缝|家都有布艺，娜娜家的主打可爱选择的布料都比较卡通，小裁缝家主打厚实。</b></div>
-            
             <br>
             <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>海洋球</b></div>
             <div style="font-size:1.2em; "><b>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</b></div>
             <img src="6haiyangqiu.webp" style="width:40%" />
             <div class="taobao"><span>4(eSpi38dR0M6):// CZ6144</span><br /><button
