--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
         <div class="tab-btn" onclick="showTab(12)">选品13<br>地垫</div>
         <div class="tab-btn" onclick="showTab(13)">选品14<br>配件收纳</div>
         <div class="tab-btn" onclick="showTab(14)">选品15<br>彩虹门</div>
-        <div class="tab-btn" onclick="showTab(15)">更多...<br>其他好物分享</div>
+        <div class="tab-btn" onclick="showTab(15)">选品16<br>感官垫</div>
+        <div class="tab-btn" onclick="showTab(16)">更多...<br>其他好物分享</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -529,6 +530,17 @@
             <img src="1weixinqun.webp" style="display:inline-block;width:30%" />
         </div>
         <!--end of tab15-->
+                <div class="tab-page">
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>感官垫</b></div>
+            <div style="font-size:1.2em; "><b>适配攀爬架也可以单独放在地上玩。5厘米高处可以直接放置，超过5厘米建议放在安装的大板上不要单独使用。使用感官垫后表面会相对硬一些，但大人坐在上面更有安全感。</b>
+            </div>
+            <img src="16ganguandian.webp" style="width:40%" />
+            <a href="https://ktt.pinduoduo.com/t/EQLI22qZ3n"
+                target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">点击打开快团团链接</span>
+            </a>
+        </div>
+        <!--end of tab16-->
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>小泰克厨房三大金刚</b></div>
             <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐：很仿真宝贝很喜欢</b></div>
@@ -559,7 +571,7 @@
             <div class="taobao"><span>3(CgVX38dUlUp):// HU7177</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
-        <!--end of tab16-->
+        <!--end of tab17-->
 
     </div>
 </body>
