--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="tab-btn" onclick="showTab(7)">选品08<br>大颗粒积木板</div>
         <div class="tab-btn" onclick="showTab(8)">选品09<br>游戏/收纳盒</div>
         <div class="tab-btn" onclick="showTab(9)">选品10<br>亚克力相关</div>
-        <div class="tab-btn" onclick="showTab(10)">选品11<br>铝管</div>
+        <div class="tab-btn" onclick="showTab(10)">选品11<br>铝管/堵头</div>
         <div class="tab-btn" onclick="showTab(11)">选品12<br>金属洞洞板</div>
         <div class="tab-btn" onclick="showTab(12)">选品13<br>地垫</div>
         <div class="tab-btn" onclick="showTab(13)">选品14<br>配件收纳</div>
@@ -314,7 +314,7 @@
 
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>布艺</b></div>
-            <div style="font-size:1.2em; "><b>|xhs@娜娜和宝平欧巴|和|xhs@吉祥如意小裁缝|家都有布艺，娜娜家的主打可爱选择的布料都比较卡通，小裁缝家主打厚实。</b></div>
+            <div style="font-size:1.2em; "><b>|xhs@娜娜和宝平欧巴|和|xhs@吉祥如意小裁缝|家都有布艺，娜娜家的主打可爱选择的布料都比较卡通，小裁缝家主打厚实。小裁缝家还可以买到全包围版蹦床布</b></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>海洋球</b></div>
@@ -395,6 +395,10 @@
         <!--end of tab9-->
 
         <div class="tab-page">
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>亚克力板</b></div>
+            <div style="font-size:1.2em; "><b>可以淘宝搜索【亚克力球直销】或者【百川亚克力】，百川便宜些但是容易出错，海外党慎选</b></div>
+            <br>
+            <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>扎带</b></div>
             <div style="font-size:1.2em; "><b>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</b></div>
             <img src="10zhadai.webp" style="width:40%" />
@@ -419,10 +423,35 @@
         <!--end of tab10-->
 
         <div class="tab-page">
-            <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是58元</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>铝管</b></div>
+            <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是85元,8根105元</b></div>
             <img src="11lvguan.webp" style="width:40%" />
             <div class="taobao"><span>6(KiXR38d68vF):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>管塞</b></div>
+            <div style="font-size:1.2em; "><b>请选择A=43.5mm，直接备注颜色就可以经典色的选红绿蓝黄，home色的可以选灰白黑</b></div>
+            <img src="11sai1.webp" style="width:40%" />
+            <div class="taobao"><span>http://e.tb.cn/h.guITmsu68OUP6g2?tk=HKS63kbWw6I HU9196</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>接头套</b></div>
+            <div style="font-size:1.2em; "><b>请选择40mm无边款可以给多出来的接头和斜放的接头支撑，40mm圆形可以给平面垂直支撑的</b></div>
+            <img src="11sai2.webp" style="width:40%" />
+            <div class="taobao"><span>9(1moB3kbMUBV):// CA1831</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>接头孔塞</b></div>
+            <div style="font-size:1.2em; "><b>请选择A=32.6mm，可以固定27mm直径的铝管或木棍在接头上不易滑动</b></div>
+            <img src="11sai3.webp" style="width:40%" />
+            <div class="taobao"><span>http://e.tb.cn/h.gGvpNubCrGYF0qa?tk=dblW3kbN9Kn ZH4920</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+
+            
+            
         </div>
         <!--end of tab11-->
 
