--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
                 &#127873;Quadro官网优惠码
                 <br>
                 <a href="https://quadrotoys.com/?ref=cheryl"><span style="text-decoration:underline;font-size:1.5em;">北美Quadro官网：
-                    </span></a>cheryl_usa_15
+                    </span></a>cheryl_usa_15<br>
+                <a href="https://quadroshop.com/?ref=cheryl"><span style="text-decoration:underline;font-size:1.5em;">德国Quadro官网：
+                    </span></a>cheryl_10
             </div>
             <br><span style="font-size:1.8em;">扫码加微信了解更多优惠信息</span><br>
             <img alt='wechat qrcode' style='object-fit: contain;max-width:80%;height:80%;' src='4weixin.webp'><br>
