--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
             <div class="yangmaochang" style="font-size:1.5em">
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
-                <div class="taobao"><span>5$hp4D38dU5EP$:// ZH9114</span><br /><button
+                <div class="taobao"><span>8$LSzj3lenNbI$:// CZ3457</span><br /><button
                         onclick="clip(this)">复制淘口令</button></div>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 打开淘宝查看商品<br>
@@ -254,7 +254,7 @@
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%" />
             <br>
-            <a href="https://ktt.pinduoduo.com/t/Xz4AEvcJ1A"
+            <a href="https://ktt.pinduoduo.com/t/Pw667PzdsE"
                  target="_blank">
                 <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
             </a>
@@ -267,15 +267,17 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版Staplestein玩法说明可以私信驯兽师</b></div>
             <img src="3shi.webp" style="width:50%" />
-            <div class="taobao"><span>4(IxFO38dVbN7):// HU7709</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <a href="https://ktt.pinduoduo.com/t/i0SpcoORjE"
+                 target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
+             </a>    
         </div>
         <!--end of tab3-->
 
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>可以让单杠旋转起来很好玩，也适合抓握力一般的崽崽过度，绳子还可以用在别的元素上<br>请选择1m可调节款</b></div>
             <img src="4dangang.webp" style="width:40%" />
-            <div class="taobao"><span>4(UPGN38dWraK):// CZ3457</span><br /><button
+            <div class="taobao"><span>8(ZvZT3leJGMu):// CA1371</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab4-->
@@ -284,21 +286,21 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>尼龙绳</b></div>
             <div style="font-size:1.2em; "><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
             <img src="5sheng.webp" style="width:40%" />
-            <div class="taobao"><span>8(5idY38dW1jt):// CZ6135</span><br /><button
+            <div class="taobao"><span>1(qdEK3leIQlS):// MF1001</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹力绳</b></div>
             <div style="font-size:1.2em; "><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
             <img src="5tanli.webp" style="width:40%" />
-            <div class="taobao"><span>6(Hx8338dVQBq):// HU7177</span><br /><button
+            <div class="taobao"><span>3(kwyH3lertPv):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>自制爬网棉绳</b></div>
             <div style="font-size:1.2em;"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img src="5miansheng.webp" style="width:40%" />
-            <div class="taobao"><span>1(p9x438d4kQy):// CZ3457</span><br /><button
+            <div class="taobao"><span>9(19c63leHX05):// CZ6135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -309,7 +311,7 @@
             <img src="5wang3.webp" style="display:inline-block;width:30%;height:80%" />
             <img src="5wang1.webp" style="display:inline-block;width:30%" />
             <img src="5wang2.webp" style="display:inline-block;width:30%" />
-            <div class="taobao"><span>3(CYQ735cKMUh):// MF3106</span><br /><button
+            <div class="taobao"><span>6(KiQT3leHcF9):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab5-->
@@ -322,7 +324,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>海洋球</b></div>
             <div style="font-size:1.2em; "><b>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</b></div>
             <img src="6haiyangqiu.webp" style="width:40%" />
-            <div class="taobao"><span>4(eSpi38dR0M6):// CZ6144</span><br /><button
+            <div class="taobao"><span>0(qekf3letPi9):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab6-->
@@ -331,21 +333,21 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>软秋千</b></div>
             <div style="font-size:1.2em; "><b>适合小娃，样式方便收纳不占空间</b></div>
             <img src="7qiuqian1.webp" style="width:40%" />
-            <div class="taobao"><span>7(BT9638d8UUE):// HU7679</span><br /><button
+            <div class="taobao"><span>7(od3p3leunqk):// CA1501</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>定型秋千</b></div>
             <div style="font-size:1.2em; "><b>小泰克适合小娃，很多小伙伴选择的款式，优点是定型，缺点是不方便收纳</b></div>
             <img src="7qiuqian3.webp" style="width:40%" />
-            <div class="taobao"><span>8(r7dK38dUlNp):// ZH9102</span><br /><button
+            <div class="taobao"><span>1(Rmaj3letqJn):// MU5183</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>板子秋千</b></div>
             <div style="font-size:1.2em; "><b>适合大娃，简单方便易收纳，也可以直接用15*35的半板搭建</b></div>
             <img src="7qiuqian2.webp" style="width:40%" />
-            <div class="taobao"><span>1(et8a38dNwum):// ZH9114</span><br /><button
+            <div class="taobao"><span>7(kyzP3leuaj1):// MF3084</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab7-->
@@ -354,13 +356,13 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Lego原版底板</b></div>
             <div style="font-size:1.2em; "><b>得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
             <img src="8lego.webp" style="width:40%" />
-            <div class="taobao"><span>8(MEyS38d13Gx):// MF1001</span><br /><button
+            <div class="taobao"><span>3(f0KK3leuzRc):// CA1371</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替底板，适配得宝</b></div>
             <img src="8jimuban.webp" style="width:40%" />
-            <div class="taobao"><span>7(xkI138diMzJ):// CA1371</span><br /><button
+            <div class="taobao"><span>5(Sf6R3leFE5f):// MF3084</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab8-->
@@ -369,14 +371,14 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配方形箱子</b></div>
             <div style="font-size:1.2em; "><b>宜家Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
             <img src="9penzi.webp" style="width:40%" />
-            <div class="taobao"><span>0(VvK938dRl30):// ZH9102</span><br /><button
+            <div class="taobao"><span>7(AZFb3leEL9W):// CZ6135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配长方形感官盆</b></div>
             <div style="font-size:1.2em; "><b>宜家SAMLA 55升可以卡在35+35x25+20cm的框架里，可以做更大的感观盆 （20管可以在淘宝Quadro中国买到）</b></div>
             <img src="9penzi2.webp" style="width:40%" />
-            <div class="taobao"><span>3(eH1O38dmv0H):// HU7709</span><br /><button
+            <div class="taobao"><span>1(q24I3levTrN):// MF3135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -384,14 +386,14 @@
             <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</b></div>
             <img src="9shouna3.webp" style="display:inline-block;width:50%" />
             <img src="9shouna4.webp" style="display:inline-block;width:50%" />
-            <div class="taobao"><span>0(18Sk38dSEDc):// CA1710</span><br /><button
+            <div class="taobao"><span>5(hrmP3lewedh):// CA1371</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</b></div>
             <img src="9shouna5.webp" style="width:40%" />
             <img src="9shouna2.webp" style="width:40%" />
-            <div class="taobao"><span>4(emqC38didAz):// CZ3457</span><br /><button
+            <div class="taobao"><span>8(iNmy3leDsOv):// HU7709</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab9-->
@@ -404,22 +406,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>扎带</b></div>
             <div style="font-size:1.2em; "><b>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</b></div>
             <img src="10zhadai.webp" style="width:40%" />
-            <div class="taobao"><span>0(lxq638dTKV7):// MF3106</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
-            <br>
-            <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>管道玩具</b></div>
-            <div style="font-size:1.2em;"><b>亚克力洞洞板（孔径6cm）上可以使用</b></div>
-            <img src="10gundao.webp" style="display:inline-block;width:40%" />
-            <div class="taobao"><span>4(f7A438dVb7s):// MF3135</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
-            <br>
-            <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玻璃蜡笔</b></div>
-            <div style="font-size:1.2em;"><b>在亚克力板上显色较为清楚，容易擦洗</b></div>
-            <img src="10bi.webp" style="display:inline-block;width:40%" />
-            <img src="10bi2.webp" style="display:inline-block;width:40%" />
-            <div class="taobao"><span>4(QKkI38dStot):// HU7679</span><br /><button
+            <div class="taobao"><span>8(msPT3leDNBN):// CZ3148</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab10-->
@@ -428,7 +415,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>铝管</b></div>
             <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是85元,8根105元</b></div>
             <img src="11lvguan.webp" style="width:40%" />
-            <div class="taobao"><span>6(KiXR38d68vF):// CZ3457</span><br /><button
+            <div class="taobao"><span>9(TKxN3leygfD):// HU7177</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -442,7 +429,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>接头套</b></div>
             <div style="font-size:1.2em; "><b>请选择40mm无边款可以给多出来的接头和斜放的接头支撑，40mm圆形可以给平面垂直支撑的</b></div>
             <img src="11sai2.webp" style="width:40%" />
-            <div class="taobao"><span>9(1moB3kbMUBV):// CA1831</span><br /><button
+            <div class="taobao"><span>5(aTzf3leCX1c):// CA1831</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -478,31 +465,25 @@
             <div style="font-size:1.2em; "><b>适配|吉祥如意小裁缝|洞洞板的配件</b></div>
             <img src="12pj1.webp" style="display:inline-block;width:18%" />
             <img src="12pj2.webp" style="display:inline-block;width:18%" />
-            <div class="taobao"><span>7(oWpQ38dcVGq):// MU6304</span><br /><button
+            <div class="taobao"><span>5(joQT3leyqYC):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>适配|哎哟妈呀|洞洞板的配件</b></div>
             <img src="12pj3.webp" style="width:40%" />
-            <div class="taobao"><span>0(6UzR38dXgZY):// CA1371</span><br /><button
+            <div class="taobao"><span>3(vd7W3lezJTo):// HU7177</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
             <img src="12dongdongban1.webp" style="width:40%" />
-            <div class="taobao"><span>7(kVxK38d65Ak):// HU7709</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
-            <br>
-            <br>
-            <div style="font-size:1.2em; "><b>吸力比较好的小可爱磁铁</b></div>
-            <img src="12dongdongban3.webp" style="width:40%" />
-            <div class="taobao"><span>6(uvwa38dTYFz):// ZH9114</span><br /><button
+            <div class="taobao"><span>7(SOfN3lez147):// HU7679</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>车辆磁力贴，崽崽很喜欢，但单词翻译不是很完美</b></div>
             <img src="12dongdongban2.webp" style="width:40%" />
-            <div class="taobao"><span>9(UI5Z38dTMq9):// MF3106</span><br /><button
+            <div class="taobao"><span>0(3YO53leArLZ):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab12-->
